--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "prisma": "^4.13.0"
@@ -25,6 +26,7 @@
     "@prisma/client": "^4.13.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.16.2",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
